fixed collapse on dependent items

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -851,13 +851,23 @@ border: 1px solid #333;
 	padding: 10px 0px;
 }
 .product_wrap p.text {
-	/*min-height: 20px;*/
+	height: 40px;
+	overflow: hidden;
+}
+.dependent_products p.text {
+	height: 25px;
+	overflow: hidden;
+}
+.monitoring_products p.text {
 	height: 60px;
 	overflow: hidden;
 }
 .product_wrap div.part {
   width: 250px;
   float:left;
+}
+.dependent_products .product_wrap div.part {
+	height: 60px;
 }
 .product_wrap div.part a {
   display: inline;
